fix(dialog): fix scroll jump when showing dialog

--- a/src/Dialog/Dialog.module.scss
+++ b/src/Dialog/Dialog.module.scss
@@ -5,7 +5,6 @@
   color: var(--colors-neutral-dark);
   margin: auto;
   padding: 4rem;
-  position: relative;
 
   &::backdrop {
     background-color: rgb(from var(--colors-neutral-black) r g b / 53%);
